--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "file-saver": "^2.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "web3": "^0.20.6"
